:Date: $Date$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::


Changes Since 0.3.9
===================

* setup.py: Added installation of data files in
  ``docutils/parsers/rst/include/``.

* docutils/__init__.py:

  - Added ``__version_details__`` attribute to describe code source
    (repository/snapshot/release).

* docutils/parsers/rst/__init__.py:

  - Added validator to tab_width setting, with test.  Closes SF bug
    #1212515, report from Wu Wei.

* docutils/parsers/rst/states.py:

  - Fixed bug with escaped colons indicating a literal block.

* docutils/parsers/rst/directives/misc.py:

  - Added the "default-role" and "title" directives.
  - Added standard data file syntax to the "include" directive.

* docutils/parsers/rst/directives/images.py:

  - Added support for image width and height units.

* docutils/parsers/rst/include/: Directory added to project; contains
  standard data files for the "include" directive.  Initial contents:
  character entity substitution definition sets.

* docutils/writers/html4css1.py:

  - Added support for image width and height units.
  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.
  - A warning is now issued if neither ``--stylesheet`` nor
    ``--stylesheet-path`` is specified.
  - Made ``--embed-stylesheet`` the default rather than
    ``--link-stylesheet``.

* docutils/writers/docutils_xml.py:

  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.

* docutils/writers/null.py:

  - The Null Writer now returns an empty string instead of None.

* docs/dev/distributing.txt: Added to project; guide for distributors.

* docs/user/links.txt: Added to project; lists of Docutils-related
  links.

* docs/ref/rst/substitutions.txt: "reStructuredText Standard
  Substitution Definition Sets", added to project.

* test/coverage.sh: Added to project; test coverage script.
