@@ -40,6 +40,8 @@ peps.Headers                    pep (r)                       360
 
 peps.Contents                   pep (r)                       380
 
+html.StylesheetCheck            html4css1 (w)                 420
+
 references.AnonymousHyperlinks  standalone (r), pep (r)       440
 
 references.IndirectHyperlinks   standalone (r), pep (r)       460
@@ -83,6 +85,7 @@ misc.CallBack                   n/a                           990
 Key:
 
 * (r): Reader
+* (w): Writer
 * (d): Directive
 * (t): Transform
 * (/p): Via a "pending" node
