@@ -911,6 +911,11 @@ _`_source`
 
     Default: stdin (None).  No command-line options.
 
+_`_stylesheet_required`
+    Used to disable stylesheet checking in writers that use
+    stylesheets.  For programmatic use only.
+
+    Default: required (1).  No command-line options.
 
 .. _ISO 639: http://www.loc.gov/standards/iso639-2/englangn.html
 
